--- a/DockerfileBIGANTest
+++ b/DockerfileBIGANTest
@@ -2,7 +2,8 @@ FROM tensorflow/tensorflow:latest-gpu-py3
 
 
 #Copy the file in the host machine to the container
-COPY Dataset3/normalTest/ Dataset3/normalTest/
+#COPY Dataset3/normalTest/ Dataset3/normalTest/
+COPY Dataset3/novelTest/ Dataset3/novelTest/
 COPY Modules/ Modules/
 COPY E500_BIGAN/ E500_BIGAN/
 COPY BIGANTest.py BIGANTest.py
@@ -12,4 +13,5 @@ RUN python3 -m pip install sklearn
 RUN python3 -m pip install pillow
 
 # Execute the program
-CMD python3 BIGANTest.py 500 Dataset3/normalTest/ E500_BIGAN/ E500Result/ E500BIGAN_normal_test.txt
+#CMD python3 BIGANTest.py 500 Dataset3/normalTest/ E500_BIGAN/ E500Result/ E500BIGAN_normal_test.txt
+CMD python3 BIGANTest.py 500 Dataset3/novelTest/ E500_BIGAN/ E500Result/ E500BIGAN_novel_test.txt
