--- a/DockerfileBIGANTrain
+++ b/DockerfileBIGANTrain
@@ -1,8 +1,7 @@
 FROM tensorflow/tensorflow:latest-gpu-py3
 
+COPY Dataset2/normalTraining32/ Dataset2/normalTraining32/
 
-#Copy the file in the host machine to the container
-COPY Dataset1/normalTraining32/ Dataset1/normalTraining32/
 COPY Modules/ Modules/
 COPY BIGANTraining.py BIGANTraining.py
 
@@ -11,4 +10,4 @@ RUN python3 -m pip install sklearn
 RUN python3 -m pip install pillow
 
 # Execute the program
-CMD python3 BIGANTraining.py Dataset2/normalTraining32/ >  E500_BIGAN/training.txt
+CMD python3 BIGANTraining.py Dataset2/normalTraining32/ E500_BIGAN_Dataset2/ > E500_BIGAN_Dataset2/training.txt
